# xrootd

./: CMakeLists.txt  cmake_uninstall.cmake.in
bindings/python/: CMakeLists.txt  setup.py.in
cmake/: FindLibUuid.cmake  FindOpenSSL.cmake  FindReadline.cmake  FindSystemd.cmake  XRootDDefaults.cmake  XRootDFindLibs.cmake  XRootDOSDefs.cmake
src/: XrdApps.cmake  XrdClient.cmake  XrdCrypto.cmake  XrdDaemons.cmake  XrdFfs.cmake  XrdFileCache.cmake  XrdHttp.cmake  XrdMacaroons.cmake  XrdPlugins.cmake  XrdPosix.cmake  XrdServer.cmake  XrdSsi.cmake  XrdTpc.cmake  XrdUtils.cmake  XrdXml.cmake
src/XrdAcc/: XrdAccGroups.cc
src/XrdCl/: CMakeLists.txt  XrdClClassicCopyJob.cc  XrdClFileStateHandler.cc  XrdClFileStateHandler.hh  XrdClLocalFileHandler.cc  XrdClMonitor.hh  XrdClXRootDResponses.hh
src/XrdCms/: XrdCmsLogin.cc
src/XrdCrypto/: XrdCryptosslCipher.cc  XrdCryptosslRSA.cc  XrdCryptosslgsiAux.cc
src/XrdNet/: XrdNetSecurity.cc
src/XrdOss/: XrdOssApi.cc  XrdOssCache.hh
src/XrdOuc/: XrdOucBackTrace.cc  XrdOucPsx.cc
src/XrdPosix/: XrdPosix.cc  XrdPosixAdmin.hh  XrdPosixDir.cc  XrdPosixDir.hh  XrdPosixFile.cc  XrdPosixFile.hh  XrdPosixLinkage.cc  XrdPosixLinkage.hh  XrdPosixMap.hh  XrdPosixPreload32.cc  XrdPosixXrootd.cc
src/XrdSecpwd/: XrdSecProtocolpwd.cc
src/XrdSecsss/: XrdSecsssAdmin.cc
src/XrdSfs/: XrdSfsFlags.hh
src/XrdSsi/: XrdSsiDir.cc
src/XrdSys/: XrdSysE2T.cc  XrdSysFAttr.cc  XrdSysLogger.cc  XrdSysPlatform.hh  XrdSysPthread.hh
